modifications fichier app component html / module et user-profile

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,7 +1,8 @@
-    <p><img [src]="user.photo" alt="photo"/></p>
+    <img [src]="user.photo" alt="photo"/></p>
         <p>Name: {{user.name}}</p>
             <p>Firstname: {{user.firstname}}</p>
-    <p [style.visibility]="label"> Age: {{user.age}}</p>
-    <p>{{user.quote}}</p>
-    <h2><input [(ngModel)]="user.quote" placeholder="write your quote"/></h2>
-    <button mat-button (click)="onClickButton()">Click me!</button>
+            <p [style.visibility]="label"> Age: {{user.age}}</p>
+            <p>{{user.quote}}</p>
+                <h2><input [(ngModel)]="user.quote" placeholder="write your quote"/></h2>
+                <button mat-button (click)="onClickButton()">Click me!</button>
+                
