fix beug user-profile

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -3,5 +3,5 @@
 <p>Firstname: {{user.firstname}}</p>
 <p [style.visibility]="label"> Age: {{user.age}}</p>
 <p>{{user.quote}}</p>
-<h2><input [(ngModel)]="user.quote" placeholder="write your quote" /></h2>
+<h2><input [(ngModel)]="user.quote"></h2>
 <button mat-button (click)="onClickButton()">Click me!</button>
