correction du fichier app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <h2>My films</h2>
 <ul *appShowMovies = "appShowMovies" >
-  <li appHightLight>Harry Potter</li>
+  <li appHighlight>Harry Potter</li>
   <li>Seigneur des anneaux</li>
   <li>Il faut sauver le soldat Ryan</li>
   <li>Avengers</li>
