--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
 
 
-<h2>My films</h2>
-<ul *appShowMovies = "appShowMovies" >
-  <li appHighlight>Harry Potter</li>
-  <li>Seigneur des anneaux</li>
-  <li>Il faut sauver le soldat Ryan</li>
-  <li>Avengers</li>
-  <li>Seul au monde</li>
-</ul>
+<menu></menu>
+<router-outlet></router-outlet>
